crates/solidity/testing/snapshots/bindings_output/events/overload_selection/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected Equal or Semicolon.
   ╭─[input.sol:6:17]
   │
 6 │         emit Foo(1, 2);
   │                 ───┬──  
   │                    ╰──── Error occurred here.
───╯
Error: Expected Equal or Semicolon.
   ╭─[input.sol:7:17]
   │
 7 │         emit Foo(false);
   │                 ───┬───  
   │                    ╰───── Error occurred here.
───╯
Error: Expected Equal or Semicolon.
   ╭─[input.sol:9:17]
   │
 9 │         emit Foo({ x: 1, y: 2 });
   │                 ────────┬───────  
   │                         ╰───────── Error occurred here.
───╯
Error: Expected Equal or Semicolon.
    ╭─[input.sol:10:17]
    │
 10 │         emit Foo({ flag: true });
    │                 ────────┬───────  
    │                         ╰───────── Error occurred here.
────╯
References and definitions: 
    ╭─[input.sol:1:1]
    │
  1 │ contract Test {
    │          ──┬─  
    │            ╰─── name: 1
  2 │     event Foo(uint x, uint y);
    │           ─┬─      ┬       ┬  
    │            ╰────────────────── name: 2
    │                    │       │  
    │                    ╰────────── name: 3
    │                            │  
    │                            ╰── name: 4
  3 │     event Foo(bool flag);
    │           ─┬─      ──┬─  
    │            ╰───────────── name: 5
    │                      │   
    │                      ╰─── name: 6
    │ 
  5 │     function test() internal {
    │              ──┬─  
    │                ╰─── name: 7
  6 │         emit Foo(1, 2);
    │         ──┬─ ─┬─  
    │           ╰─────── unresolved
    │               │   
    │               ╰─── name: 8
  7 │         emit Foo(false);
    │         ──┬─ ─┬─  
    │           ╰─────── unresolved
    │               │   
    │               ╰─── name: 9
    │ 
  9 │         emit Foo({ x: 1, y: 2 });
    │         ──┬─ ─┬─  
    │           ╰─────── unresolved
    │               │   
    │               ╰─── name: 10
 10 │         emit Foo({ flag: true });
    │         ──┬─ ─┬─  
    │           ╰─────── unresolved
    │               │   
    │               ╰─── name: 11
────╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │ ╭─────▶ contract Test {
  2 │ │           event Foo(uint x, uint y);
    │ │       ───────────────┬─┬──────┬──────  
    │ │                      ╰───────────────── definiens: 2
    │ │                        │      │        
    │ │                        ╰─────────────── definiens: 3
    │ │                               │        
    │ │                               ╰──────── definiens: 4
  3 │ │ │         event Foo(bool flag);
    │ │ │     ─────────────┬────┬───────  
    │ │ │                  ╰────────────── definiens: 5
    │ │ │                       │         
    │ │ │                       ╰───────── definiens: 6
  4 │ │ ╭───▶ 
    ┆ ┆ ┆     
  6 │ │ │             emit Foo(1, 2);
    │ │ │     ────────────┬───────────  
    │ │ │                 ╰───────────── definiens: 8
  7 │ │ │ │           emit Foo(false);
    │ │ │ │   ────────────┬────────────  
    │ │ │ │               ╰────────────── definiens: 9
  8 │ │ │ ╭─▶ 
  9 │ │ │ ├─▶         emit Foo({ x: 1, y: 2 });
    │ │ │ │                                       
    │ │ │ ╰─────────────────────────────────────── definiens: 10
 10 │ │ │             emit Foo({ flag: true });
    │ │ │     ─────────────────┬────────────────  
    │ │ │                      ╰────────────────── definiens: 11
 11 │ │ ├───▶     }
    │ │ │             
    │ │ ╰───────────── definiens: 7
 12 │ ├─────▶ }
    │ │           
    │ ╰─────────── definiens: 1
────╯
